--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#FFB74D</color>
     <color name="colorAccent">#29B6F6</color>
 
+    <color name="black_with_transparency">#80000000</color>
+
 </resources>
