--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
+        android:theme="@style/Widget.MaterialComponents.ActionBar.Primary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
@@ -20,7 +20,6 @@
 
         <ImageView
             android:id="@+id/toolbar_imageView"
-            android:src="@drawable/android_image"
             android:layout_width="40dp"
             android:layout_height="40dp" />
 
@@ -65,7 +64,8 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:maxLines="2"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
