--- a/app/src/main/res/drawable/message_bg_left.xml
+++ b/app/src/main/res/drawable/message_bg_left.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="10dp"
-        android:topRightRadius="0dp"/>
+        android:radius="20dp"
+        android:topLeftRadius="0dp"/>
 
-    <solid android:color="@color/design_default_color_secondary"/>
+    <solid android:color="@color/colorAmberPrimary"/>
 
 </shape>
