--- a/app/src/main/res/drawable/message_bg_right.xml
+++ b/app/src/main/res/drawable/message_bg_right.xml
@@ -3,9 +3,9 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="10dp"
-        android:topLeftRadius="0dp"/>
+        android:radius="20dp"
+        android:bottomRightRadius="0dp"/>
 
-    <solid android:color="@color/colorPrimaryDark"/>
+    <solid android:color="@color/colorCyanPrimary"/>
 
 </shape>
