Auth view inputs validations

--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -12,6 +12,7 @@
         android:padding="8dp"
         android:text="..."
         android:textSize="16sp"
+        android:fontFamily="@font/comfortaa_regular"
         android:background="@drawable/message_bg_left"/>
 
 </RelativeLayout>
