--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.35" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_left"
@@ -27,6 +27,18 @@
         app:layout_constraintGuide_percent="0.9" />
 
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Whatchatt"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:fontFamily="@font/montserrat_bold"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        style="@style/Widget.MaterialComponents.Button.TextButton"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/email_input"
         android:layout_width="0dp"
@@ -41,6 +53,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/comfortaa_regular"
             android:maxLines="1"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -61,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
+            android:fontFamily="@font/comfortaa_regular"
             android:maxLines="1"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -73,6 +87,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/register_btn_text"
+        android:textSize="18sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintTop_toBottomOf="@id/password_input"
         app:layout_constraintLeft_toLeftOf="@id/guideline_left"
         app:layout_constraintRight_toRightOf="@id/guideline_right"
@@ -99,6 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Please wait..."
+            android:fontFamily="@font/comfortaa_regular"
             android:textColor="#FFFFFF"
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@id/progress_bar"
