--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -26,6 +26,7 @@
         <TextView
             android:id="@+id/toolbar_textView"
             android:paddingStart="10dp"
+            android:fontFamily="@font/montserrat_regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -65,6 +66,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/comfortaa_regular"
                 android:maxLines="2"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -75,6 +77,7 @@
             android:layout_height="wrap_content"
             android:text="SEND"
             android:textSize="18sp"
+            android:fontFamily="@font/montserrat_bold"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
