--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -17,6 +17,7 @@
             android:padding="8dp"
             android:text="..."
             android:textSize="16sp"
+            android:fontFamily="@font/comfortaa_regular"
             android:background="@drawable/message_bg_right"
             android:layout_alignParentEnd="true"/>
 
