--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:maxLines="1"
+        android:textSize="16sp"
+        android:fontFamily="@font/montserrat_regular"
         app:layout_constraintLeft_toRightOf="@id/imageView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/imageView"
@@ -32,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:maxLines="1"
+        android:fontFamily="@font/comfortaa_regular"
         app:layout_constraintLeft_toRightOf="@id/imageView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name_text"
